--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,4 +1,8 @@
 @import './update-element.scss';
+@import './variables.scss';
+@import './mixin.scss';
+@import './sidebar.scss';
+
 html,
 body {
   height: 100%;
