--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,5 +1,5 @@
 @import './update-element.scss';
-@import './variables.scss';
+@import './variables.module.scss';
 @import './mixin.scss';
 @import './sidebar.scss';
 
