feat: 菜单样式完善

--- a/src/styles/variables.module.scss
+++ b/src/styles/variables.module.scss
@@ -10,8 +10,8 @@ $subMenuBg: #1f2d3d;
 $subMenuHover: #001528;
 
 $sideBarWidth: 210px;
-$hideSideBarWidth: 54px;
-
+// $hideSideBarWidth: 54px;
+$hideSideBarWidth: 0px;
 $sideBarDuration: 0.28s;
 
 
