--- a/src/styles/sidebar.scss
+++ b/src/styles/sidebar.scss
@@ -78,11 +78,11 @@
 
   .hideSidebar {
     .sidebar-container {
-      width: 54px !important;
+      width: #{$hideSideBarWidth} !important;
     }
 
     .main-container {
-      margin-left: 54px;
+      margin-left: #{$hideSideBarWidth};
     }
 
     .submenu-title-noDropdown {
