feat: 全屏功能实现

--- a/src/styles/update-element.scss
+++ b/src/styles/update-element.scss
@@ -4,7 +4,7 @@
 }
 .el-input__wrapper{
   box-shadow:none !important;
-  background-color: transparent;
+  background-color: transparent !important;
 }
 
 .el-avatar{
