--- a/src/styles/update-element.scss
+++ b/src/styles/update-element.scss
@@ -1,11 +1,11 @@
-.el-input__inner{
-  box-shadow:none !important;
-  --el-select-input-focus-border-color:none !important;
-}
-.el-input__wrapper{
-  box-shadow:none !important;
-  background-color: transparent !important;
-}
+// .el-input__inner{
+//   box-shadow:none !important;
+//   --el-select-input-focus-border-color:none !important;
+// }
+// .el-input__wrapper{
+//   box-shadow:none !important;
+//   background-color: transparent !important;
+// }
 
 .el-avatar{
   --el-avatar-bg-color:none !important;
